add simple loop

--- a/CppPerformanceLearning/CppPerformanceLearning.vcxproj
+++ b/CppPerformanceLearning/CppPerformanceLearning.vcxproj
@@ -154,6 +154,7 @@
   <ItemGroup>
     <ClCompile Include="BenchMarkMain.cpp" />
     <ClCompile Include="ArraySum.cpp" />
+    <ClCompile Include="SimpleForLoop.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\GoogleBenchmark\build\src\benchmark.vcxproj">
