--- a/CppPerformanceLearning/CppPerformanceLearning.vcxproj.filters
+++ b/CppPerformanceLearning/CppPerformanceLearning.vcxproj.filters
@@ -24,5 +24,8 @@
     <ClCompile Include="SimpleForLoop.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Initialization.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
